Join uses vthread. Others trivial fixes